# tire_auralization

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
ext/glad/include/glad/: gl.h
src/: allocator.cpp  allocator.h  audio.cpp  audio.h  container.cpp  container.h  defines.h  frag.glsl  log.cpp  log.h  main.cpp  math.h  renderer.cpp  renderer.h  thread.cpp  thread.h  vert.glsl  window.cpp  window.h
